Fix nearby page scrollbar

--- a/client/src/styles/components/_content-container.scss
+++ b/client/src/styles/components/_content-container.scss
@@ -7,6 +7,8 @@
   &__card-container {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     &__card {
       max-width: 335px;
       margin: 1rem;
